--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,7 @@
   background: url('../img/home_hero.jpg') center center no-repeat;
   background-size: cover;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 @-webkit-keyframes scale-in {
@@ -121,6 +122,8 @@
   background: rgb(24, 154, 153);
   color: #FFF;
   padding: 3em 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .section-callout h2,
