--- a/css/app.css
+++ b/css/app.css
@@ -47,6 +47,27 @@
   animation: scale-in 400ms ease-out 100ms;
 }
 
+.social {
+  text-align: center;
+}
+
+.social li {
+  display: inline-block;
+  margin: 0 0.5em;
+}
+
+.social a {
+  display: block;
+  width: 45px;
+  height: 45px;
+  text-indent: -2000px;
+  background-repeat: no-repeat;
+}
+
+.facebook { background-image: url('../img/facebook.png'); }
+.twitter { background-image: url('../img/twitter.png'); }
+.youtube { background-image: url('../img/youtube.png'); }
+
 .next-event {
   text-align: center;
   background: #FFF;
@@ -87,13 +108,6 @@
   color: #FFF;
 }
 
-.game.row.collapse {
-  margin-bottom: 1em;
-  background-color: #FFF;
-  border-radius: 4px;
-  box-shadow: 0px 2px 0px rgba(0,0,0,0.1);
-}
-
 .game-title, .game-maker, .game-desc {
   padding: 0 2rem;
 }
@@ -116,6 +130,7 @@
 .game-image img {
   display: inline-block;
   padding: 1em;
+  margin: 1.5em auto;
 }
 
 .section-callout {
@@ -183,6 +198,14 @@ RESPONSIVE STYLES
     margin: 1rem;
   }
 
+  .social {
+    text-align: left;
+  }
+
+  .social li {
+    margin: 0 1em 0 0;
+  }
+
   .section-callout input {
     width: auto;
     margin: 0 0.5em 0 0;
@@ -203,7 +226,7 @@ RESPONSIVE STYLES
   }
 
   .tagline {
-    margin: 4em 1em 0 0;
+    margin: 1.8em 1em 0 0;
     font-size: 2em;
     background: none;
     padding: 0;
@@ -248,6 +271,14 @@ RESPONSIVE STYLES
 
   .event-btn {
     margin: 0 3em 0;
+  }
+
+  .social {
+    margin: 1em 0 0 0;
+  }
+
+  .social li {
+
   }
 
   .game-image {
