--- a/css/global.css
+++ b/css/global.css
@@ -12,7 +12,7 @@ h2 {
   text-transform: uppercase;
 }
 
-section, section.row {
+section.row {
   margin-top: 4em;
   margin-bottom: 4em;
 }
@@ -23,6 +23,17 @@ a {
 
 a:hover {
   color: rgb(24, 154, 153);
+}
+
+.content-block, .row.collapse.content-block {
+  background: rgba(255,255,255,0.7);
+  padding: 1em;
+  border-radius: 4px;
+  margin-bottom: 1em;
+}
+
+.bigger {
+  font-size: 1.2em;
 }
 
 
