--- a/css/header.css
+++ b/css/header.css
@@ -25,6 +25,7 @@ header {
   max-width: 20px;
   -webkit-transition: -webkit-transform 100ms ease-out;
   transition: transform 100ms ease-out;
+  margin-right: 5px;
 }
 
 .logo:hover img {
@@ -90,8 +91,8 @@ RESPONSIVE STYLES
   }
 
   .logo:hover img {
-    -webkit-transform: scale(1.4) translate(0px, 5px) rotate(-3deg);
-    transform: scale(1.4) translate(0px, 5px) rotate(-3deg);
+    -webkit-transform: scale(1.4) translate(-10px, 5px) rotate(-3deg);
+    transform: scale(1.4) translate(-10px, 5px) rotate(-3deg);
   }
 
   nav a {
