Reworked homepage for expo

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 .hero {
   min-height: 350px;
-  background: url('../img/home_hero.jpg') center center no-repeat;
+  background: url('../img/expo/hero.jpg') center center no-repeat;
   background-size: cover;
   margin-bottom: 0;
   margin-top: 0;
