Added more stuff for the expo on the homepage.

--- a/css/expo.css
+++ b/css/expo.css
@@ -5,14 +5,14 @@
   color: #FFF;
   margin-bottom: 0;
   margin-top: 0;
-  padding: 1em 0 3em 0;
+  padding: 1em 0 1em 0;
 }
 
 .expo-header {
   font-size: 3em;
   font-weight: bold;
   margin: 0 auto;
-  text-shadow: 0px 1px 3px rgba(0,0,0,0.9);
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
   color: #FFF;
   -webkit-animation: scale-in 400ms ease-out 100ms;
   animation: scale-in 400ms ease-out 100ms;
@@ -21,6 +21,22 @@
 
 .expo-description {
   font-size: 1.5em;
+}
+
+.expo-sponsors {
+  margin-top: 1em;
+}
+
+.expo-sponsors h3 {
+  color: #FFF;
+  font-size: 1em;
+}
+
+.expo-sponsors .logo-grid a {
+}
+
+.expo-sponsors .logo-grid img {
+  max-width: 100%;
 }
 
 .expo-features:after {
@@ -38,6 +54,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+
 }
 
 .expo-box:hover {
@@ -64,15 +81,15 @@
 }
 
 
-.exhibitors { background-image: linear-gradient(
+.games { background-image: linear-gradient(
     rgba(24, 154, 153, 0.15),
     rgba(24, 154, 153, 0.15)
-  ), url('../img/expo/exhibitors.jpg'); }
+  ), url('../img/expo/games.jpg'); }
 
-.exhibitors:hover { background-image: linear-gradient(
+.games:hover { background-image: linear-gradient(
     rgba(24, 154, 153, 0.25),
     rgba(24, 154, 153, 0.25)
-  ), url('../img/expo/exhibitors.jpg'); }
+  ), url('../img/expo/games.jpg'); }
 
 .breakouts { background-image: linear-gradient(
     rgba(24, 154, 153, 0.15),
@@ -126,7 +143,7 @@ RESPONSIVE STYLES
 @media only screen and (min-width: 64.063em) {
 
   .expo-hero {
-    padding: 1em 0 3em 0;
+    padding: 1em 0 0 0;
     min-height: 480px;
   }
 
