--- a/css/expo.css
+++ b/css/expo.css
@@ -80,16 +80,15 @@
   text-shadow: 0px 1px 2px rgba(0,0,0,0.9);
 }
 
-
-.games { background-image: linear-gradient(
+.exhibitors { background-image: linear-gradient(
     rgba(24, 154, 153, 0.15),
     rgba(24, 154, 153, 0.15)
-  ), url('../img/expo/games.jpg'); }
+  ), url('../img/expo/exhibitors.jpg'); }
 
-.games:hover { background-image: linear-gradient(
+.exhibitors:hover { background-image: linear-gradient(
     rgba(24, 154, 153, 0.25),
     rgba(24, 154, 153, 0.25)
-  ), url('../img/expo/games.jpg'); }
+  ), url('../img/expo/exhibitors.jpg'); }
 
 .breakouts { background-image: linear-gradient(
     rgba(24, 154, 153, 0.15),
@@ -120,6 +119,19 @@
     rgba(24, 154, 153, 0.25),
     rgba(24, 154, 153, 0.25)
   ), url('../img/expo/giveaways.jpg'); }
+
+
+.cosplay-hero {
+  background: url('../img/expo/cosplay-hero.jpg') center center no-repeat;
+  background-size: cover;
+  padding: 4em 0 6em 0;
+}
+
+.cosplay-hero h2,
+.cosplay-hero h4,
+.cosplay-hero p {
+  color: #FFF;
+}
 
 /*******************************
 RESPONSIVE STYLES
