--- a/css/app.css
+++ b/css/app.css
@@ -51,14 +51,16 @@
 .social a {
   display: block;
   width: 45px;
-  height: 45px;
+  height: 30px;
   text-indent: -2000px;
   background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
 }
 
-.facebook { background-image: url('../img/facebook.png'); }
-.twitter { background-image: url('../img/twitter.png'); }
-.youtube { background-image: url('../img/youtube.png'); }
+.facebook a { background-image: url('../img/social/facebook.svg'); }
+.twitter a { background-image: url('../img/social/twitter.svg'); }
+.youtube a { background-image: url('../img/social/youtube.svg'); }
 
 .next-event {
   color: #000;
