--- a/css/expo.css
+++ b/css/expo.css
@@ -32,12 +32,6 @@
   font-size: 1em;
 }
 
-.expo-sponsors .logo-grid a {
-}
-
-.expo-sponsors .logo-grid img {
-  max-width: 100%;
-}
 
 .expo-features:after {
   content: " ";
@@ -161,7 +155,7 @@ RESPONSIVE STYLES
 @media only screen and (min-width: 64.063em) {
 
   .expo-hero {
-    padding: 1em 0 0 0;
+    padding: 1em 0 2em 0;
     min-height: 480px;
   }
 
