--- a/css/expo.css
+++ b/css/expo.css
@@ -9,9 +9,9 @@
 }
 
 .expo-header {
-  font-size: 3em;
+  font-size: 1.6em;
   font-weight: bold;
-  margin: 0 auto;
+  margin: 1em auto;
   text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
   color: #FFF;
   -webkit-animation: scale-in 400ms ease-out 100ms;
@@ -20,7 +20,8 @@
 }
 
 .expo-description {
-  font-size: 1.5em;
+  margin: 1.5em 0;
+  font-size: 1.1em;
 }
 
 .expo-sponsors {
@@ -74,40 +75,28 @@
   text-shadow: 0px 1px 2px rgba(0,0,0,0.9);
 }
 
-.exhibitors { background-image: linear-gradient(
-    rgba(24, 154, 153, 0.15),
-    rgba(24, 154, 153, 0.15)
-  ), url('../img/expo/exhibitors.jpg'); }
+.exhibitors { background-image: url('../img/expo/exhibitors.jpg'); }
 
 .exhibitors:hover { background-image: linear-gradient(
     rgba(24, 154, 153, 0.25),
     rgba(24, 154, 153, 0.25)
   ), url('../img/expo/exhibitors.jpg'); }
 
-.breakouts { background-image: linear-gradient(
-    rgba(24, 154, 153, 0.15),
-    rgba(24, 154, 153, 0.15)
-  ), url('../img/expo/breakouts.jpg'); }
+.breakouts { background-image: url('../img/expo/breakouts.jpg'); }
 
 .breakouts:hover { background-image: linear-gradient(
     rgba(24, 154, 153, 0.25),
     rgba(24, 154, 153, 0.25)
   ), url('../img/expo/breakouts.jpg'); }
 
-.cosplay { background-image: linear-gradient(
-    rgba(24, 154, 153, 0.15),
-    rgba(24, 154, 153, 0.15)
-  ), url('../img/expo/cosplay.jpg'); }
+.cosplay { background-image: url('../img/expo/cosplay.jpg'); }
 
 .cosplay:hover { background-image: linear-gradient(
     rgba(24, 154, 153, 0.25),
     rgba(24, 154, 153, 0.25)
   ), url('../img/expo/cosplay.jpg'); }
 
-.giveaways { background-image: linear-gradient(
-    rgba(24, 154, 153, 0.15),
-    rgba(24, 154, 153, 0.15)
-  ), url('../img/expo/giveaways.jpg'); }
+.giveaways { background-image: url('../img/expo/giveaways.jpg'); }
 
 .giveaways:hover { background-image: linear-gradient(
     rgba(24, 154, 153, 0.25),
@@ -137,21 +126,49 @@
 RESPONSIVE STYLES
 ********************************/
 
+/* Large Phones (and small Tablets) */
+@media only screen and (min-width: 21em) {
+
+  .expo-header {
+    font-size: 2.4em;
+  }
+
+  .expo-description {
+    margin: 1.5em 0;
+    font-size: 1.2em;
+  }
+
+
+}
+
 /* Medium Screens (Tablets) */
 @media only screen and (min-width: 40.063em) {
 
   .expo-header {
-    color: #FFF;
-    margin: 1rem auto;
+    font-size: 2.8em;
   }
 
+  .expo-description {
+    margin: 0 0 1em 0;
+    font-size: 1.3em;
+  }
+
+
   .expo-box h3 {
-    font-size: 2em;
+    font-size: 2.2em;
   }
 
 }
 
 /* Large Screens (Laptops) */
+@media only screen and (min-width: 50em) {
+
+  .expo-header {
+    font-size: 3.5em;
+  }
+}
+
+/* Largest Screens (Desktops) */
 @media only screen and (min-width: 64.063em) {
 
   .expo-hero {
