Updated expo links so they're target-new. Added contrast to the Cosplay hero image. Updated some copy.

--- a/css/expo.css
+++ b/css/expo.css
@@ -114,6 +114,7 @@
 .cosplay-hero h4,
 .cosplay-hero p {
   color: #FFF;
+  text-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 .cosplay-hero .image-credit a {
