--- a/css/expo.css
+++ b/css/expo.css
@@ -9,7 +9,7 @@
 }
 
 .expo-header {
-  font-size: 1.6em;
+  font-size: 1.4em;
   font-weight: bold;
   margin: 1em auto;
   text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
@@ -17,6 +17,10 @@
   -webkit-animation: scale-in 400ms ease-out 100ms;
   animation: scale-in 400ms ease-out 100ms;
   text-align: center;
+}
+
+.expo-header img {
+  display: none;
 }
 
 .expo-description {
@@ -32,7 +36,6 @@
   color: #FFF;
   font-size: 1em;
 }
-
 
 .expo-features:after {
   content: " ";
@@ -146,14 +149,25 @@ RESPONSIVE STYLES
 @media only screen and (min-width: 40.063em) {
 
   .expo-header {
-    font-size: 2.8em;
+    font-size: 2.6em;
+  }
+
+  .expo-header img {
+    max-width: 50px;
+    display: inline-block;
+    transition: transform 100ms ease-out;
+  }
+
+  .expo-header img:hover {
+    -webkit-transform: rotate(-3deg) scale(1.05);
+    -moz-transform: rotate(-3deg) scale(1.05);
+    transform: rotate(-3deg) scale(1.05);
   }
 
   .expo-description {
     margin: 0 0 1em 0;
     font-size: 1.3em;
   }
-
 
   .expo-box h3 {
     font-size: 2.2em;
@@ -165,7 +179,11 @@ RESPONSIVE STYLES
 @media only screen and (min-width: 50em) {
 
   .expo-header {
-    font-size: 3.5em;
+    font-size: 3em;
+  }
+
+  .expo-header img {
+    max-width: 60px;
   }
 }
 
@@ -178,10 +196,13 @@ RESPONSIVE STYLES
   }
 
   .expo-header {
-    margin: 0.5em auto;
-    font-size: 4.6em;
-    background: none;
-    padding: 0;
+    margin: 1em 0.2em;
+    text-align: left;
+    font-size: 4em;
+  }
+
+  .expo-header img {
+    max-width: 70px;
   }
 
   .expo-box {
@@ -191,15 +212,17 @@ RESPONSIVE STYLES
 }
 
 /* Epic Screens (Large Desktops) */
-@media only screen and (min-width: 100em) {
+@media only screen and (min-width: 140em) {
 
   .expo-hero {
-    padding: 3em 0 6em 0;
+    padding: 1em 0 6em 0;
     min-height: 480px;
   }
 
-  .expo-header {
-    margin: 1em auto;
+
+  .expo-header img {
+    max-width: 90px;
+    margin: 0;
   }
 
 }
