Added studio email

--- a/wp-content/themes/indienomicon/style.css
+++ b/wp-content/themes/indienomicon/style.css
@@ -756,6 +756,10 @@ body.single-studio .links a {
   background-image: url('images/icons/instagram.svg');
 }
 
+.links a.email {
+  background-image: url('images/icons/email.svg');
+}
+
 
 
 /**********************************************************
