Replaced YouTube icon on homepage with Instagram icon.

--- a/wp-content/themes/indienomicon/style.css
+++ b/wp-content/themes/indienomicon/style.css
@@ -525,6 +525,7 @@ footer ul {
 
 .facebook a { background-image: url('images/social/facebook.svg'); }
 .twitter a { background-image: url('images/social/twitter.svg'); }
+.instagram a { background-image: url('images/social/instagram.svg'); }
 .youtube a { background-image: url('images/social/youtube.svg'); }
 
 .next-event {
