--- a/wp-content/themes/indienomicon/style.css
+++ b/wp-content/themes/indienomicon/style.css
@@ -687,6 +687,21 @@ body.single-studio .logo {
   margin-bottom: 1em;
 }
 
+.gdc-banner {
+  position: absolute;
+  background: #FF9900;
+  color: #FFF;
+  font-weight: bold;
+  padding: 5px;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+}
+
+.studio-logo-container {
+  position: relative;
+}
+
 body.single-game .arrows,
 body.single-studio .arrows {
   position: relative;
